kube/api-svc.yml
apiVersion: v1
kind: Service
metadata:
 namespace: sacredsteps
 name: cs-api-svc
spec: 
  type: ClusterIP
  selector:
    app: cs-api
  ports:
    - port: 80
      targetPort: 8080
