kube/db-svc.yml
apiVersion: v1
kind: Service
metadata:
 namespace: sacredsteps
 name: dorian-db-svc
spec: 
  type: ClusterIP
  selector:
    app: dorian-db
  ports:
    - port: 5432
      targetPort: 5432
