kube/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sacredsteps
  name: cs-api-ingress
spec: 
  ingressClassName: nginx
  rules: 
  - host: api.sacredsteps.duckdns.org
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: cs-api-svc
            port:
              number: 80
